--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,3 +1,28 @@
 @import 'vars';
 @import 'title';
+@import 'fonts';
+@import 'body';
+@import 'link';
+@import 'img';
 @import 'header';
+@import 'menu';
+@import 'list';
+@import 'container';
+@import 'category';
+@import 'article';
+@import 'nav';
+@import 'popup';
+@import 'icon';
+@import 'last';
+@import 'about';
+@import 'form';
+@import 'table';
+@import 'prep';
+@import 'lifehack';
+@import 'comments';
+@import 'photos';
+@import 'button';
+@import 'alpha';
+@import 'tags';
+@import 'new';
+@import 'footer';
