--- a/app/scss/list.scss
+++ b/app/scss/list.scss
@@ -8,13 +8,20 @@
 	}
 	&_share {
 		display: flex;
+		justify-content: flex-start;
+		align-items: center;
+		gap: 2rem;
 	}
 	&__item {
-		&_menu {
+		&_menu,
+		&_no-menu {
 			display: flex;
 			justify-content: flex-start;
 			align-items: center;
 			column-gap: 20px;
+			border-bottom: 1px solid var(--border);
+		}
+		&_no-menu {
 			border-bottom: 1px solid var(--border);
 		}
 		&_alpha {
