--- a/app/scss/button.scss
+++ b/app/scss/button.scss
@@ -1,7 +1,7 @@
 /* Button */
 .button {
 	&_input {
-		font-size: 14px;
+		font-size: 1rem;
 		line-height: 150%;
 		letter-spacing: calc((1rem*3)/100);
 		background-color: var(--white);
