--- a/app/scss/header.scss
+++ b/app/scss/header.scss
@@ -1,36 +1,8 @@
 /* Header */
 .header {
-	&__menu {
-		display: block;
-		position: relative;
-		border-top: 1px solid var(--border);
-		border-bottom: 1px solid var(--border);
-		line-height: 4rem;
-		text-align: center;
-		cursor: pointer;
-	}
-	&__popup {
-		display: none;
-		&_open {
-			display: block;
-			width: 100%;
-			background-color: var(--white);
-			position: absolute;
-			top: 4rem;
-			right: 0;
-			z-index: 1;
-			border-radius: 10px;
-		}
-	}
-}
-
-@media (min-width: 768px) {
-	.header {
-		&__popup {
-			display: block;
-		}
-		&__name {
-			display: none;
-		}
+	min-height: 165px;
+	padding-top: 2rem;
+	&_open {
+		min-height: 100vh;
 	}
 }
