--- a/app/scss/list.scss
+++ b/app/scss/list.scss
@@ -12,6 +12,18 @@
 		align-items: center;
 		gap: 2rem;
 	}
+	&_menu {
+		display: none;
+	}
+	&_menu-open {
+		display: block;
+		width: 100vw;
+		position: absolute;
+		top: 100px;
+		left: 0;
+		z-index: 2;
+		background-color: var(--white);
+	}
 	&__item {
 		&_menu,
 		&_no-menu {
@@ -43,10 +55,6 @@
 }
 @media (min-width: 768px) {
 	.list {
-		&_menu {
-			display: flex;
-			justify-content: space-between;
-		}
 		&_nav {
 			display: flex;
 			min-height: inherit;
@@ -66,6 +74,15 @@
 				gap: 2rem;
 				align-items: start;
 			}
+		}
+	}
+}
+
+@media (min-width: 1440px) {
+	.list {
+		&_menu {
+			display: flex;
+			justify-content: space-between;
 		}
 	}
 }
